welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
	vuBiscuit = true
                  ^Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit) {
^